test/corpus/scalars/number_literals.txt
==================
Decimal integer
==================
port: 8080
count: 0
neg: -42

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer)))

==================
Decimal integer with underscore separators
==================
big: 1_000_000
hex: 0xFF_00
oct: 0o77_77
bin: 0b1010_0101

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer)))

==================
Float with decimal point
==================
ratio: 0.5
neg: -1.5
big: 1_000.25

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (float))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (float))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (float)))

==================
Float with exponent
==================
eps: 1e-10
large: 1.5E+3

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (float))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (float)))

==================
Spec 0.8 redundant-leading-zero integers are strings
==================
zip: 01234
neg: -045
double: 00
underscored_zero: 0_7
plain_zero: 0
count: 1234
hex: 0x1A
plus: +7

---

(source_file
  (object_pair key: (key) separator: (sep_string) value: (scalar))
  (object_pair key: (key) separator: (sep_string) value: (scalar))
  (object_pair key: (key) separator: (sep_string) value: (scalar))
  (object_pair key: (key) separator: (sep_string) value: (scalar))
  (object_pair key: (key) separator: (sep_string) value: (integer))
  (object_pair key: (key) separator: (sep_string) value: (integer))
  (object_pair key: (key) separator: (sep_string) value: (integer))
  (object_pair key: (key) separator: (sep_string) value: (integer)))

==================
Spec 0.8 redundant-leading-zero floats are strings
==================
ver: 01.5
exp: 05e3
sub_one: 0.5
ordinary: 1.5

---

(source_file
  (object_pair key: (key) separator: (sep_string) value: (scalar))
  (object_pair key: (key) separator: (sep_string) value: (scalar))
  (object_pair key: (key) separator: (sep_string) value: (float))
  (object_pair key: (key) separator: (sep_string) value: (float)))
