test/corpus/spec-conformance.txt
==================
§ 5.0.1: a glued colon on the first line selects an Array string
==================
key:value

---

(source_file
  (top_array_item
    value: (top_scalar)))

==================
§ 5.0.1: an unterminated leading quote selects an Array string
==================
'tis the season: fa

---

(source_file
  (top_array_item
    value: (top_scalar)))

==================
§ 5.0.1: pair-shaped lines remain strings after an Array first item
==================
plain
host: localhost

---

(source_file
  (top_array_item
    value: (top_scalar))
  (top_array_item
    value: (top_scalar)))

==================
§ 5.0.1: a bare line after an Object first pair is invalid
:error
==================
a: 1
plain

---

(source_file
  (ERROR))

==================
§ 6.10: a glued colon after an Object root is rejected
:error
==================
root: 1
key:value

---

(source_file
  (ERROR))

==================
§ 6.10: raw marker glued to value is rejected
:error
==================
pattern::[a-z]+

---

(source_file
  (ERROR
    (key)))

==================
§ 6.10: empty body after each marker is allowed (spec 0.5.0 — only : and ::)
==================
a:
b::

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (empty_value))
  (object_pair
    key: (key)
    separator: (sep_raw)
    value: (empty_value)))

==================
§ 6.10: every marker form with whitespace and a body
==================
a:  v1
b::  v2

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_raw)
    value: (raw_scalar)))

==================
§ 5.6.1: trailing non-whitespace after closer is rejected
:error
==================
o: {
  k: v
} trailing

---

(source_file
  (ERROR
    (key)
    (sep_string)
    (key)
    (sep_string)
    (scalar)
    (key)))

==================
§ 5.6.1: trailing whitespace after closer is allowed
==================
o: {
  k: v
}

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_object
      (open_brace)
      (object_pair
        key: (key)
        separator: (sep_string)
        value: (scalar))
      (close_brace))))

==================
Nested compounds with comments and blank lines (## in 0.5.0)
==================
root: {
  ## a comment in the middle
  inner: [

    a
    b
  ]

  flag: true
}

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_object
      (open_brace)
      (comment)
      (object_pair
        key: (key)
        separator: (sep_string)
        value: (compound_array
          (open_bracket)
          (blank_line)
          (array_item
            value: (scalar))
          (array_item
            value: (scalar))
          (close_bracket)))
      (blank_line)
      (object_pair
        key: (key)
        separator: (sep_string)
        value: (keyword
          (kw_true)))
      (close_brace))))

==================
Both multi-line forms with dotted keys around them
==================
a.b: (
  inner
)
c.d: ((
  raw
))

---

(source_file
  (object_pair
    key: (key
      (dotted_key))
    separator: (sep_string)
    value: (multiline_stripped
      (open_paren)
      (multiline_content_line)
      (close_paren)))
  (object_pair
    key: (key
      (dotted_key))
    separator: (sep_string)
    value: (multiline_verbatim
      (open_dparen)
      (multiline_content_line)
      (close_dparen))))

==================
§ 5.2: raw marker keeps `(` body literal (no multi-line dispatch)
==================
a:: (
b:: ((
c:: ()
d:: (())

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_raw)
    value: (raw_scalar))
  (object_pair
    key: (key)
    separator: (sep_raw)
    value: (raw_scalar))
  (object_pair
    key: (key)
    separator: (sep_raw)
    value: (raw_scalar))
  (object_pair
    key: (key)
    separator: (sep_raw)
    value: (raw_scalar)))

==================
Stripped multiline contains `))` as content
==================
body: (
    hello
    ))
    world
)

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (multiline_stripped
      (open_paren)
      (multiline_content_line)
      (multiline_content_line)
      (multiline_content_line)
      (close_paren))))

==================
Verbatim multiline contains a single `)` as content
==================
body: ((
hello
)
world
))

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (multiline_verbatim
      (open_dparen)
      (multiline_content_line)
      (multiline_content_line)
      (multiline_content_line)
      (close_dparen))))

==================
Stripped multiline contains `((` as content
==================
body: (
    ((
)

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (multiline_stripped
      (open_paren)
      (multiline_content_line)
      (close_paren))))

==================
§ 3.3 / § 4: NBSP satisfies <sep-end> after a plain `:` separator (spec 0.7.0 whitespace is the 25-code-point set, not ASCII-only)
==================
a: 1

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer)))

==================
§ 5.6.1: closer line tolerates trailing NBSP, not just ASCII space/tab (spec 0.7.0 § 3.3)
==================
o: {
  k: v
} 

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_object
      (open_brace)
      (object_pair
        key: (key)
        separator: (sep_string)
        value: (scalar))
      (close_brace))))

==================
§ 3.1: exactly one leading byte-order mark is skipped
==================
﻿a: 1

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer)))

==================
§ 3.1: only the very first BOM is skipped — a second one is ordinary key content
==================
﻿﻿a: 1

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer)))
