test/corpus/typed_markers.txt
==================
Raw string marker (spec 0.5.0 — only :: remains)
==================
pattern:: [a-z]+
ipv6:: [::1]:8080
template:: {issue.id}.tpl

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_raw)
    value: (raw_scalar))
  (object_pair
    key: (key)
    separator: (sep_raw)
    value: (raw_scalar))
  (object_pair
    key: (key)
    separator: (sep_raw)
    value: (raw_scalar)))

==================
Raw inline scalar after :: treats a leading { as literal data (spec 0.7.0 § 4 <inline-raw-scalar>, § 5.8.5; fixture raw_marker/inline_leading_bracket)
==================
{a:: {abc}

---

(source_file
  (top_array_item
    value: (inline_object
      (inline_pair
        key: (key)
        separator: (sep_raw)
        value: (inline_raw_scalar)))))
